More spacing fixes for the mobile viewport in theh docs.

--- a/src/docs/docs.scss
+++ b/src/docs/docs.scss
@@ -134,6 +134,11 @@ header {
     li:first-child {
       margin: 0;
     }
+
+    li {
+      padding: 0;
+      margin-left: .8em;
+    }
   }
 
 
